// soap_server.js
const bodyParser = require('body-parser');
const fs = require('fs');
const path = require('path');
const soap = require('soap');
const predictionService = require('./services/predictionService');

// WSDL dosyasÄ±nÄ±n iÃ§eriÄŸini oku
const xml = fs.readFileSync(path.join(__dirname, 'tahmin_servisi.wsdl'), 'utf8');
const SOAP_SERVICE_PATH = '/soap/prediction';

// SOAP metotlarÄ±nÄ±n implementasyonu
const serviceImplementation = {
    PredictionService: {
        PredictionServicePort: {
            // GetPrediction Metodunun Implementasyonu
            GetPrediction: async (args, callback, headers, req) => {
                try {
                    // NOT: SOAP'ta Kimlik DoÄŸrulama
                    // REST/gRPC'deki gibi HTTP baÅŸlÄ±klarÄ±ndan veya SOAP Header'Ä±ndan
                    // JWT/API Key alÄ±nÄ±r ve burada doÄŸrulanÄ±r.
                    
                    // Åžimdilik varsayÄ±msal kullanÄ±cÄ± ID'si kullanÄ±yoruz.
                    const userId = 1; 
                    const inputData = args.InputData || args.features;

        if (!inputData) {
            throw new Error("Girdi verisi (InputData) bulunamadÄ±.");
        }
                    
                    // Ä°ÅŸ mantÄ±ÄŸÄ±nÄ± Service katmanÄ±na devret
                    const result = await predictionService.getNewPrediction(userIdÅŸinputData);

                    // SOAP yanÄ±tÄ±nÄ± XML yapÄ±sÄ±na uygun olarak geri dÃ¶ndÃ¼r
                    return {
                        PredictionResult: result.prediction,
                        Message: 'SOAP Ã¼zerinden su tÃ¼ketim tahmini baÅŸarÄ±yla yapÄ±ldÄ±.',
                        PredictionID: result.id
                    };
                } catch (error) {
                    console.error("SOAP GetPrediction hatasÄ±:", error.message);
                    // Hata durumunda (SOAP iÃ§in Ã¶zelleÅŸtirilmiÅŸ bir hata yapÄ±sÄ± gereklidir)
                    // Basitlik iÃ§in sadece hata mesajÄ±nÄ± dÃ¶ndÃ¼relim
                    return {
                        Message: `Hata: ${error.message}`,
                        PredictionResult: -1
                    };
                }
            },
            
            // GetPredictionHistory Metodunun Implementasyonu
            GetPredictionHistory: async (args, callback, headers, req) => {
                try {
                    // VarsayÄ±msal kullanÄ±cÄ± ID'si
                    const userId = 1; 

                    // Ä°ÅŸ mantÄ±ÄŸÄ±nÄ± Service katmanÄ±na devret
                    const history = await predictionService.getHistory(userId);
                    
                    // SOAP yanÄ±tÄ± iÃ§in HistoricalPrediction listesi oluÅŸtur
                    const predictions = history.map(item => ({
                        ID: item.id,
                        PredictionDate: item.prediction_date.toISOString(),
                        FeaturesJSON: JSON.stringify(item.features),
                        PredictionResult: item.prediction
                    }));

                    // YanÄ±tÄ± geri dÃ¶ndÃ¼r
                    return {
                        Predictions: predictions, // WSDL'deki repeated element
                        Message: 'SOAP Ã¼zerinden geÃ§miÅŸ tahminler baÅŸarÄ±yla getirildi.'
                    };
                } catch (error) {
                    console.error("SOAP GetPredictionHistory hatasÄ±:", error.message);
                    return {
                        Message: `Hata: ${error.message}`,
                        Predictions: []
                    };
                }
            }
        }
    }
};

/**
 * SOAP sunucusunu Express uygulamasÄ±na baÄŸlar.
 * @param {object} app - Express uygulamasÄ± Ã¶rneÄŸi.
 */
function integrateSoapServer(app) {
    // Express'te body-parser'Ä± kullanma zorunluluÄŸu
    app.use(bodyParser.raw({type: function(){return true;}, limit: '5mb'}));

    // SOAP servisini Express'e baÄŸla
    soap.listen(app, SOAP_SERVICE_PATH, serviceImplementation, xml, (wsdl_path) => {
       // soap_server.js sonundaki log satÄ±rÄ±
console.log(`ðŸ“¡ SOAP sunucusu Ã§alÄ±ÅŸÄ±yor. WSDL: http://localhost:${process.env.PORT || 5000}${SOAP_SERVICE_PATH}?wsdl`);    });
}

module.exports = { integrateSoapServer };